Fixed text align css selectors

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,6 +66,7 @@ p {
   justify-content: center;
   align-items: center; }
   .header-title, .header-desc {
+    text-align: center;
     margin-bottom: 2rem; }
   .header-title {
     font: 700 4rem "Playfair Display", serif; }
@@ -104,11 +105,10 @@ p {
   .card-content {
     padding: 2rem; }
   .card-description, .card-title {
-    text-align: center;
     margin-bottom: 1rem; }
   .card-title {
     font: 700 1.5rem "Lato", sans-serif; }
-  .card-description {
+  .card-desc {
     color: #a5a5a5;
     font: 400 1rem "Playfair Display", serif; }
   .card-anchor {
