--- a/public/scss/layout/_layout.scss
+++ b/public/scss/layout/_layout.scss
@@ -26,6 +26,7 @@
   @include flex(column, center, center);
 
   &-title, &-desc {
+    text-align: center;
     margin-bottom: 2rem;
   }
 
